refactor: Java 17 upgrades
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>